methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:40: error: not found: value marquer
  marquer()
  ^PatternPicture:44: error: not found: value marquer
  marquer()
  ^PatternPicture:59: error: not found: value marquer
  marquer()
  ^PatternPicture:63: error: not found: value marquer
  marquer()
  ^