methods.picture.PatternPicture.scala.code
override def run() {
  for(j <-0 to 1){
    LigneMotif()
  }
  
}

def carrémotif() {
  for(i <-0 to 3){
  FaireMotif()
	}
  avance(4)
}

def LigneMotif(){
  for(i<- 0 to 1){
  carrémotif()
  avance(5)
  }
}

def Marquer(){
  baisseBrosse()
  leveBrosse()
}
def FaireMotif(){
  setCouleurBrosse(Color.red)
  avance()
 	Marquer()
  gauche()
  avance()
  gauche()
  avance()
  Marquer()
  gauche()
  avance()
  gauche()
  avance(2)
  setCouleurBrosse(Color.blue)
  marquer()
  avance()
  gauche()
  avance()
  marquer()
  gauche()
  avance()
  droite()
  droite()
  setCouleurBrosse(Color.green)
  avance()
 	Marquer()
  gauche()
  avance()
  gauche()
  avance()
  Marquer()
  avance()
  setCouleurBrosse(Color.yellow)
  marquer()
  avance()
  gauche()
  avance()
  marquer()
  avance(2)
  gauche() 
}